--- a/H1EmuLauncher/Windows/LauncherWindow.xaml
+++ b/H1EmuLauncher/Windows/LauncherWindow.xaml
@@ -19,28 +19,28 @@
         ContentRendered="MainLauncherContentRendered"
         Closed="MainLauncherClosed">
 
-        <!-- Hide window border but keep animations -->
-        <WindowChrome.WindowChrome>
-            <WindowChrome GlassFrameThickness="0"
+    <!-- Hide window border but keep animations -->
+    <WindowChrome.WindowChrome>
+        <WindowChrome GlassFrameThickness="0"
                           CornerRadius="0"
                           CaptionHeight="0"
                           ResizeBorderThickness="0"
                           UseAeroCaptionButtons="False"/>
 
-        </WindowChrome.WindowChrome>
-    
-        <!-- Tasbar icon info -->
-        <Window.TaskbarItemInfo>
-            <TaskbarItemInfo x:Name="taskbarIcon" Description="H1Emu Launcher"/>
-        </Window.TaskbarItemInfo>
+    </WindowChrome.WindowChrome>
+
+    <!-- Tasbar icon info -->
+    <Window.TaskbarItemInfo>
+        <TaskbarItemInfo x:Name="taskbarIcon" Description="H1Emu Launcher"/>
+    </Window.TaskbarItemInfo>
 
     <Window.Resources>
         <Storyboard x:Key="NextImageAnimation"
                     Completed="StoryboardCompleted">
-            
+
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)"
                                            Storyboard.TargetName="carouselImage">
-                
+
                 <EasingDoubleKeyFrame KeyTime="00:00:00.00" Value="0"/>
                 <EasingDoubleKeyFrame KeyTime="00:00:00.05" Value="-3"/>
                 <EasingDoubleKeyFrame KeyTime="00:00:00.10" Value="-6"/>
@@ -61,13 +61,13 @@
                 <EasingDoubleKeyFrame KeyTime="00:00:01.00" Value="-573"/>
             </DoubleAnimationUsingKeyFrames>
         </Storyboard>
-        
+
         <Storyboard x:Key="NextImageAnimationFollow"
                     Completed="StoryboardCompleted">
-            
+
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)"
                                            Storyboard.TargetName="carouselImageSlider">
-                
+
                 <EasingDoubleKeyFrame KeyTime="00:00:00.00" Value="573"/>
                 <EasingDoubleKeyFrame KeyTime="00:00:00.05" Value="570"/>
                 <EasingDoubleKeyFrame KeyTime="00:00:00.10" Value="567"/>
@@ -88,13 +88,13 @@
                 <EasingDoubleKeyFrame KeyTime="00:00:01.00" Value="0"/>
             </DoubleAnimationUsingKeyFrames>
         </Storyboard>
-        
+
         <Storyboard x:Key="PrevImageAnimation"
                     Completed="StoryboardCompleted">
-            
+
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)"
                                            Storyboard.TargetName="carouselImage">
-                
+
                 <EasingDoubleKeyFrame KeyTime="00:00:00.00" Value="0"/>
                 <EasingDoubleKeyFrame KeyTime="00:00:00.05" Value="3"/>
                 <EasingDoubleKeyFrame KeyTime="00:00:00.10" Value="6"/>
@@ -115,13 +115,13 @@
                 <EasingDoubleKeyFrame KeyTime="00:00:01.00" Value="573"/>
             </DoubleAnimationUsingKeyFrames>
         </Storyboard>
-        
+
         <Storyboard x:Key="PrevImageAnimationFollow"
                     Completed="StoryboardCompleted">
-            
+
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)"
                                            Storyboard.TargetName="carouselImageSlider">
-                
+
                 <EasingDoubleKeyFrame KeyTime="00:00:00.00" Value="-573"/>
                 <EasingDoubleKeyFrame KeyTime="00:00:00.05" Value="-570"/>
                 <EasingDoubleKeyFrame KeyTime="00:00:00.10" Value="-567"/>
@@ -147,14 +147,14 @@
     <Window.Triggers>
         <EventTrigger RoutedEvent="ButtonBase.Click"
                       SourceName="triggerPrevImageStoryboard">
-            
+
             <BeginStoryboard Storyboard="{StaticResource PrevImageAnimationFollow}"/>
             <BeginStoryboard Storyboard="{StaticResource PrevImageAnimation}"/>
         </EventTrigger>
-        
+
         <EventTrigger RoutedEvent="ButtonBase.Click"
                       SourceName="triggerNextImageStoryboard">
-            
+
             <BeginStoryboard Storyboard="{StaticResource NextImageAnimationFollow}"/>
             <BeginStoryboard Storyboard="{StaticResource NextImageAnimation}"/>
         </EventTrigger>
@@ -183,12 +183,12 @@
             <!-- Grid for logo and exit button & other -->
             <Grid MouseLeftButtonDown="MoveWindow"
                   Background="#FF2A2A32">
-                
+
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                
+
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
@@ -209,12 +209,12 @@
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        
+
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        
+
                         <!-- Wraps the about project informational -->
                         <WrapPanel Grid.ColumnSpan="2"
                                    VerticalAlignment="Center"
@@ -235,7 +235,7 @@
                                           SelectedIndex="-1"
                                           SelectionChanged="LanguageSelectionChanged"
                                           Style="{DynamicResource ComboBox}">
-                                    
+
                                     <ComboBoxItem Content="English"/>
                                     <ComboBoxItem Content="Chinese"/>
                                     <ComboBoxItem Content="Croatian"/>
@@ -257,7 +257,7 @@
                                        HorizontalAlignment="Left"
                                        Margin="21,0,0,7"
                                        IsHitTestVisible="False"/>
-                                
+
                             </Grid>
 
                             <!-- Report A Bug Hyperlink -->
@@ -272,7 +272,7 @@
                                                Style="{DynamicResource HyperLinkStyle}"/>
                                 </Hyperlink>
                             </TextBlock>
-                            
+
                             <!-- About Project Hyperlink -->
                             <TextBlock Margin="0,10,20,0"
                                        VerticalAlignment="Center"
@@ -296,7 +296,7 @@
                                     HorizontalAlignment="Right"
                                     BorderThickness="0"
                                     Style="{DynamicResource MinimiseButtonStyle}">
-                                
+
                                 <Button.Background>
                                     <ImageBrush ImageSource="/Resources/Minimise.png"/>
                                 </Button.Background>
@@ -313,7 +313,7 @@
                                     HorizontalAlignment="Right"
                                     BorderThickness="0"
                                     Style="{DynamicResource CloseButtonStyle}">
-                                
+
                                 <Button.Background>
                                     <ImageBrush ImageSource="/Resources/Exit.png"/>
                                 </Button.Background>
@@ -325,7 +325,7 @@
                                    Grid.ColumnSpan="2"
                                    HorizontalAlignment="Right"
                                    VerticalAlignment="Bottom">
-                            
+
                             <!-- Join the community at message -->
                             <TextBlock Foreground="White"
                                        VerticalAlignment="Center"
@@ -346,12 +346,11 @@
                                     
                                     <!-- Context menu to copy link -->
                                     <TextBlock.ContextMenu>
-                                        <ContextMenu>
-                                            <MenuItem
-                                            Header="Copy"
-                                            Click="websiteLinkCopy"
-                                            Style="{DynamicResource PopupMenuItem}"/>
-
+                                        <ContextMenu Style="{DynamicResource ContextMenuStyle}">
+                                            <MenuItem Header="Copy"
+                                                      Click="websiteLinkCopy"
+                                                      Style="{DynamicResource PopupMenuItem}">
+                                            </MenuItem>
                                         </ContextMenu>
                                     </TextBlock.ContextMenu>
                             </TextBlock>
@@ -367,7 +366,7 @@
                                     HorizontalAlignment="Right"
                                     BorderThickness="0"
                                     Style="{DynamicResource DiscordButton}">
-                                
+
                                 <Button.Background>
                                     <ImageBrush ImageSource="..\Resources\Discord.png"/>
                                 </Button.Background>
@@ -377,7 +376,7 @@
                                         <MenuItem Header="Copy"
                                                   Click="discordLinkCopy"
                                                   Style="{DynamicResource PopupMenuItem}"/>
-                                        
+
                                     </ContextMenu>
                                 </Button.ContextMenu>
                             </Button>
@@ -399,7 +398,7 @@
                                       Direction="-90"
                                       RenderingBias="Quality"
                                       ShadowDepth="1"/>
-                    
+
                 </Border.Effect>
 
                 <Grid>
@@ -597,7 +596,7 @@
                                 <LineBreak/>
                                 <LineBreak/>
                                 <Run Text="{DynamicResource item50}"/>
-                                
+
                             </TextBlock>
 
                             <!-- H1Emu Chinese Community link -->
@@ -694,29 +693,25 @@
                                       SelectionChanged="ServerSelectorChanged"
                                       Style="{DynamicResource ComboBox}">
 
-                                <ComboBoxItem Content="{DynamicResource item139}"/>
-                                <ComboBoxItem Content="{DynamicResource item140}"/>
+                                <ComboBoxItem Content="{DynamicResource item139}"
+                                              Style="{DynamicResource ComboBoxItemStyle}"/>
+                                <ComboBoxItem Content="{DynamicResource item140}"
+                                              Style="{DynamicResource ComboBoxItemStyle}"/>
                                 <Separator/>
                                 <ComboBoxItem x:Name="newServer"
                                               Content="{DynamicResource item141}"
-                                              PreviewMouseLeftButtonDown="AddNewServer"/>
+                                              PreviewMouseLeftButtonUp="AddNewServer"
+                                              Style="{DynamicResource ComboBoxItemStyle}"/>
                             </ComboBox>
 
-                            <!-- Delete selected server button -->
-                            <Button Click="DeleteServer"
-                                    RenderOptions.BitmapScalingMode="Fant"
-                                    Width="20"
-                                    Height="20"
-                                    Margin="17,0,0,13"
-                                    VerticalAlignment="Bottom"
-                                    HorizontalAlignment="Left"
-                                    BorderThickness="0"
-                                    Style="{DynamicResource DeleteServer}">
-
-                                <Button.Background>
-                                    <ImageBrush ImageSource="..\Resources\Server.png"/>
-                                </Button.Background>
-                            </Button>
+                            <!-- Server selector icon -->
+                            <Image Source="..\Resources\Server.png"
+                                   RenderOptions.BitmapScalingMode="Fant"
+                                   Width="20"
+                                   Height="20"
+                                   Margin="17,0,0,13"
+                                   VerticalAlignment="Bottom"
+                                   HorizontalAlignment="Left"/>
 
                             <!-- Play button -->
                             <Button x:Name="playButton"
@@ -769,7 +764,7 @@
                         
                         <TextBlock Text="{DynamicResource item62}"
                                    Style="{DynamicResource HyperLinkStyle}">
-                            
+
                             <TextBlock.Triggers>
                                 <EventTrigger RoutedEvent="MouseEnter">
                                     <BeginStoryboard x:Name="beginSettingsIconRotation">
