--- a/H1EmuLauncher/Windows/ConfirmBoxWindow.xaml
+++ b/H1EmuLauncher/Windows/ConfirmBoxWindow.xaml
@@ -108,7 +108,7 @@
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="30*"/>
-                        <RowDefinition Height="60"/>
+                        <RowDefinition Height="auto"/>
                     </Grid.RowDefinitions>
 
                     <!-- Main text message -->
@@ -123,15 +123,21 @@
                                TextAlignment="Center"
                                FontWeight="Light"/>
 
-                    <!-- Yes button -->
-                    <Button Grid.Row="1"
+                    <Grid Grid.Row="1">
+
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <!-- Yes button -->
+                        <Button Grid.Row="1"
                             Click="YesButton"
                             RenderOptions.BitmapScalingMode="Fant"
                             Width="120"
                             Height="35"
-                            Margin="0,0,150,0"
+                            Margin="0,10,15,20"
                             VerticalAlignment="Center"
-                            HorizontalAlignment="Center"
+                            HorizontalAlignment="Right"
                             Foreground="White"
                             FontFamily="Arial Black"
                             FontSize="20"
@@ -139,20 +145,21 @@
                             Content="{DynamicResource item133}"
                             Style="{DynamicResource StandardButton}">
 
-                        <Button.Background>
-                            <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
-                        </Button.Background>
-                    </Button>
+                            <Button.Background>
+                                <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
+                            </Button.Background>
+                        </Button>
 
-                    <!-- No button -->
-                    <Button Grid.Row="1"
+                        <!-- No button -->
+                        <Button Grid.Row="1"
+                                Grid.Column="1"
                             Click="NoButton"
                             RenderOptions.BitmapScalingMode="Fant"
                             Width="120"
                             Height="35"
-                            Margin="150,0,0,0"
+                            Margin="15,10,0,20"
                             VerticalAlignment="Center"
-                            HorizontalAlignment="Center"
+                            HorizontalAlignment="Left"
                             Foreground="White"
                             FontFamily="Arial Black"
                             FontSize="20"
@@ -160,10 +167,11 @@
                             Content="{DynamicResource item134}"
                             Style="{DynamicResource StandardButton}">
 
-                        <Button.Background>
-                            <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
-                        </Button.Background>
-                    </Button>
+                            <Button.Background>
+                                <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
+                            </Button.Background>
+                        </Button>
+                    </Grid>
                 </Grid>
             </Grid>
         </Border>
