--- a/H1EmuLauncher/Language/StringResources.zh-cn.xaml
+++ b/H1EmuLauncher/Language/StringResources.zh-cn.xaml
@@ -11,7 +11,7 @@
     <system:String x:Key="item11">你的steam账户中必须要有H1Z1：Just Survive这个游戏才能下载游戏本体，本项目不支持盗版。</system:String>
     <system:String x:Key="item12">加入社区在</system:String>
     <system:String x:Key="item13">启动游戏错误：</system:String>
-    <system:String x:Key="item14">未在指定的目录中找到游戏。</system:String>
+    <system:String x:Key="item14">未在指定的目录中找到游戏。\n\n检查您是否选择了包含游戏文件的正确目录，这可以在“设置”菜单中完成。</system:String>
     <system:String x:Key="item15">您必须在 Steam 帐户上拥有 H1Z1：Just Survive 才能下载。</system:String>
     <system:String x:Key="item17">无法登录到Steam:</system:String>
     <system:String x:Key="item18">添加</system:String>
