--- a/H1EmuLauncher/Windows/LauncherWindow.xaml
+++ b/H1EmuLauncher/Windows/LauncherWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         UseLayoutRounding="True"
         Title="H1Emu Launcher"
-        x:Name="MainLauncher"
+        x:Name="MainLauncherPage"
         Width="1300"
         Height="750"
         WindowStartupLocation="CenterScreen"
@@ -15,9 +15,9 @@
         FontFamily="Bahnschrift"
         FontSize="16"
         Loaded="LauncherWindowLoaded"
-        Activated="MainLauncherActivated"
-        ContentRendered="MainLauncherContentRendered"
-        Closed="MainLauncherClosed">
+        Activated="LauncherWindowActivated"
+        ContentRendered="LauncherWindowContentRendered"
+        Closed="LauncherWindowClosed">
 
     <!-- Hide window border but keep animations -->
     <WindowChrome.WindowChrome>
