--- a/H1EmuLauncher/Windows/MessageBoxWindow.xaml
+++ b/H1EmuLauncher/Windows/MessageBoxWindow.xaml
@@ -103,7 +103,7 @@
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="11*"/>
-                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
 
                 <!-- Main message box text -->
@@ -124,6 +124,7 @@
                         RenderOptions.BitmapScalingMode="Fant"
                         Width="100"
                         Height="30"
+                        Margin="0,10,0,20"
                         VerticalAlignment="Center"
                         HorizontalAlignment="Center"
                         Foreground="White"
