--- a/H1EmuLauncher/Language/StringResources.en.xaml
+++ b/H1EmuLauncher/Language/StringResources.en.xaml
@@ -11,7 +11,7 @@
     <system:String x:Key="item11">You must own H1Z1: Just Survive on your Steam account in order to download. This project does not support piracy.</system:String>
     <system:String x:Key="item12">Join the Community at</system:String>
     <system:String x:Key="item13">Error launching game:</system:String>
-    <system:String x:Key="item14">Game not found in directory.\n\nCheck you have selected the correct directory containing your game files, this can be done in the Settings menu.</system:String>
+    <system:String x:Key="item14">Game not found in specified directory.</system:String>
     <system:String x:Key="item15">You must own H1Z1: Just Survive on your Steam account in order to download.</system:String>
     <system:String x:Key="item17">Unable to login to Steam:</system:String>
     <system:String x:Key="item18">ADD</system:String>
