--- a/H1EmuLauncher/Windows/AccountKeyWindow.xaml
+++ b/H1EmuLauncher/Windows/AccountKeyWindow.xaml
@@ -7,16 +7,14 @@
         UseLayoutRounding="True"
         Title="H1Emu Account Key"
         Width="650"
-        Height="auto"
-        SizeToContent="Height"
+        Height="320"
         WindowStartupLocation="CenterOwner"
         Background="#FF2A2A32"
         FontFamily="Bahnschrift Light"
         FontSize="16"
         ResizeMode="NoResize"
         Loaded="AccountKeyLoaded"
-        Closing="AccountKeyWindowClosing"
-        Activated="AccountKeyWindowActivated">
+        Closing="AccountKeyWindowClosing">
 
     <!-- Hide window border but keep animations -->
     <WindowChrome.WindowChrome>
@@ -36,7 +34,7 @@
 
             <Grid.RowDefinitions>
                 <RowDefinition Height="60"/>
-                <RowDefinition Height="auto"/>
+                <RowDefinition Height="5*"/>
             </Grid.RowDefinitions>
 
             <!-- Grid for logo and exit button -->
@@ -102,15 +100,14 @@
 
                 <Grid>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="3*"/>
+                        <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
 
                     <!-- Info about account key message -->
-                    <TextBlock Margin="40,20,40,10"
-                               VerticalAlignment="Center"
+                    <TextBlock Width="540"
+                               Margin="0,16,0,0"
+                               VerticalAlignment="Top"
                                HorizontalAlignment="Center"
                                TextAlignment="Center"
                                Foreground="White"
@@ -119,8 +116,7 @@
                                Text="{DynamicResource item156}"/>
 
                     <!-- Hyperlink to obtain user authentication key -->
-                    <TextBlock Grid.Row="1"
-                               Margin="0,10,0,20"
+                    <TextBlock VerticalAlignment="Center"
                                HorizontalAlignment="Center">
                     
                     <Hyperlink Click="UserProfileLink"
@@ -144,11 +140,11 @@
 
                     <!-- Plain text box that holds account key for visibility toggle -->
                     <TextBox x:Name="accountKeyBoxShown"
-                             Grid.Row="2"
+                             Width="540"
                              Height="35"
-                             Margin="40,10,40,10"
+                             Margin="0,0,0,12"
                              Padding="35,0,40,0"
-                             VerticalAlignment="Center"
+                             VerticalAlignment="Bottom"
                              HorizontalAlignment="Center"
                              VerticalContentAlignment="Center"
                              FontSize="16"
@@ -159,11 +155,12 @@
 
                     <!-- Password box to hold account key -->
                     <PasswordBox x:Name="accountKeyBox"
-                                 Grid.Row="2"
+                                 Width="540"
                                  Height="35"
-                                 Margin="40,10,40,10"
+                                 Margin="0,0,0,12"
                                  Padding="35,0,40,0"
-                                 VerticalAlignment="Center"
+                                 VerticalAlignment="Bottom"
+                                 HorizontalAlignment="Center"
                                  VerticalContentAlignment="Center"
                                  PasswordChar="●"
                                  FontSize="16"
@@ -173,11 +170,12 @@
 
                     <!-- Hint for account key textbox -->
                     <TextBlock x:Name="accountKeyHint"
-                               Grid.Row="2"
+                               Width="540"
                                Height="27"
-                               Margin="40,10,40,10"
                                Padding="37,0,37,0"
-                               VerticalAlignment="Center"
+                               Margin="0,0,0,12"
+                               VerticalAlignment="Bottom"
+                               HorizontalAlignment="Center"
                                IsHitTestVisible="False"
                                Foreground="White"
                                FontSize="16"
@@ -186,22 +184,20 @@
                     <!-- Key image inside of account key textbox -->
                     <Image Source="..\Resources\AccountKey.png"
                            RenderOptions.BitmapScalingMode="Fant"
-                           Grid.Row="2"
                            Width="20"
                            Height="20"
-                           Margin="50,0,0,0"
-                           VerticalAlignment="Center"
+                           Margin="50,0,0,20"
+                           VerticalAlignment="Bottom"
                            HorizontalAlignment="Left"/>
 
                     <!-- Password visibility show button -->
                     <Button x:Name="showKeyButton"
-                            Grid.Row="2"
                             Click="ShowKey"
                             RenderOptions.BitmapScalingMode="Fant"
                             Width="24"
                             Height="24"
-                            Margin="0,0,50,0"
-                            VerticalAlignment="Center"
+                            Margin="0,0,50,18"
+                            VerticalAlignment="Bottom"
                             HorizontalAlignment="Right"
                             BorderThickness="0"
                             Style="{StaticResource ShowKeyButton}">
@@ -213,13 +209,12 @@
 
                     <!-- Password visibility hide button -->
                     <Button x:Name="hideKeyButton"
-                            Grid.Row="2"
                             Click="HideKey"
                             RenderOptions.BitmapScalingMode="Fant"
                             Width="24"
                             Height="24"
-                            Margin="0,0,50,0"
-                            VerticalAlignment="Center"
+                            Margin="0,0,50,18"
+                            VerticalAlignment="Bottom"
                             HorizontalAlignment="Right"
                             BorderThickness="0"
                             Visibility="Hidden"
@@ -231,13 +226,12 @@
                     </Button>
 
                     <!-- Close account key window button -->
-                    <Button Grid.Row="3"
+                    <Button Grid.Row="1"
                             Click="OkCloseAccountKeyWindow"
                             RenderOptions.BitmapScalingMode="Fant"
                             Width="100"
                             Height="30"
-                            Margin="0,20,0,20"
-                            VerticalAlignment="Top"
+                            VerticalAlignment="Center"
                             HorizontalAlignment="Center"
                             Foreground="White"
                             FontFamily="Arial Black"
